--- a/package.json
+++ b/package.json
@@ -2,11 +2,24 @@
   "name": "my-first-react-app",
   "version": "1.0.0",
   "description": "my first react app",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
+    "lint": "eslint .",
+    "format": "prettier --write \"**/*.+(ts|tsx|js|jsx|json|css|md)\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.+(json|css|md|js|tsx|ts|tsx)": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,6 +39,7 @@
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "2.0.5",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
