--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
   "dependencies": {
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "csstype": "^2.6.10",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-scripts-scss-ts": "^2.17.1",
+    "tslint": "^6.1.2"
   }
 }
